--- a/pom.xml
+++ b/pom.xml
@@ -69,6 +69,45 @@
 	</pluginRepositories>
 
 	<dependencies>
+	    <!-- Spring Social Dependencies -->
+	    <dependency>
+			<groupId>org.springframework.social</groupId>
+			<artifactId>spring-social-web</artifactId>
+			<version>${spring-social.version}</version>
+			<exclusions>
+				<exclusion>
+					<artifactId>spring-core</artifactId>
+					<groupId>org.springframework</groupId>
+				</exclusion>
+				<exclusion>
+					<artifactId>spring-web</artifactId>
+					<groupId>org.springframework</groupId>
+				</exclusion>
+				<exclusion>
+					<artifactId>spring-webmvc</artifactId>
+					<groupId>org.springframework</groupId>
+				</exclusion>
+				<exclusion>
+					<artifactId>spring-social-core</artifactId>
+					<groupId>org.springframework.social</groupId>
+				</exclusion>
+				<exclusion>
+					<artifactId>javax.servlet.jsp-api</artifactId>
+					<groupId>javax.servlet.jsp</groupId>
+				</exclusion>
+				<exclusion>
+					<artifactId>servlet-api</artifactId>
+					<groupId>javax.servlet</groupId>
+				</exclusion>
+			</exclusions>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.social</groupId>
+			<artifactId>spring-social-core</artifactId>
+			<version>${spring-social.version}</version>
+		</dependency>
+		<!-- End Spring Social Dependencies -->
+	    
 		<dependency>
 			<groupId>org.jasypt</groupId>
 			<artifactId>jasypt</artifactId>
@@ -700,10 +739,11 @@
 
 
 	<properties>
-		<spring.version>3.1.1.RELEASE</spring.version>
-		<aspectj.version>1.6.12</aspectj.version>
-		<spring-security.version>3.0.5.RELEASE</spring-security.version>
-		<spring-security-crypto.version>3.1.0.RC3</spring-security-crypto.version>
+		<spring.version>3.1.4.RELEASE</spring.version>
+		<spring-social.version>1.1.0.BUILD-SNAPSHOT</spring-social.version>
+		<aspectj.version>1.7.2</aspectj.version>
+		<spring-security.version>3.1.3.RELEASE</spring-security.version>
+		<spring-security-crypto.version>3.1.3.RELEASE</spring-security-crypto.version>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<maven.compiler.source>1.6</maven.compiler.source>
 		<maven.compiler.target>1.6</maven.compiler.target>
