--- a/pom.xml
+++ b/pom.xml
@@ -406,17 +406,17 @@
 		<dependency>
 			<groupId>org.apache.tiles</groupId>
 			<artifactId>com.springsource.org.apache.tiles</artifactId>
-			<version>2.1.3</version>
+			<version>${apache-tiles.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>org.apache.tiles</groupId>
 			<artifactId>com.springsource.org.apache.tiles.jsp</artifactId>
-			<version>2.1.3</version>
+			<version>${apache-tiles.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>org.apache.tiles</groupId>
 			<artifactId>com.springsource.org.apache.tiles.core</artifactId>
-			<version>2.1.3</version>
+			<version>${apache-tiles.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>org.springframework.security</groupId>
@@ -744,6 +744,7 @@
 		<aspectj.version>1.7.2</aspectj.version>
 		<spring-security.version>3.1.3.RELEASE</spring-security.version>
 		<spring-security-crypto.version>3.1.3.RELEASE</spring-security-crypto.version>
+		<apache-tiles.version>2.1.4</apache-tiles.version>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<maven.compiler.source>1.6</maven.compiler.source>
 		<maven.compiler.target>1.6</maven.compiler.target>
